Updated Engine for Testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,16 @@ include_directories(${SDL2_INCLUDE_DIRS})
 
 
 include_directories(${PROJECT_SOURCE_DIR}/includes)
+add_definitions(-DDATA_DIR="${PROJECT_SOURCE_DIR}/data/")
 
 file(GLOB_RECURSE SRC_FILES
     ${PROJECT_SOURCE_DIR}/src/*.cpp
 )
+message(STATUS "Source files:")
+foreach(file ${SRC_FILES})
+    message(STATUS "  ${file}")
+endforeach()
+
 
 
 add_executable(engine ${SRC_FILES})
