added files to cmake for project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ add_executable(engine ${SRC_FILES}
         includes/component.h
         src/engine/component/Transform.cpp
         includes/Transform.h
-        src/engine/component/SpriteRenderer.cpp
-        includes/SpriteRenderer.h
+        src/engine/component/sprite_renderer.cpp
+        includes/sprite_renderer.h
         src/engine/render/renderQueue.cpp
         includes/renderQueue.h)
 
